--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,9 @@
     <string name="app_name">JuniorSolution</string>
     <string name="msg_error_no_internet">No Internet connection. Connect to the Internet and try again.</string>
     <string name="msg_unknown_error">Error: %s </string>
+
+    <!--VendorScreen-->
+    <string name="search_hint">Search…</string>
+    <string name="search_no_result_title">Sorry! No results found…</string>
+    <string name="search_no_result_subtitle">Please try a different search request\n or browse businesses from the list</string>
 </resources>
